# tf-kubernetes

./: .gitignore  Cargo.toml  README.md  build.rs  terraform.toml
src/: lib.rs
tests/: example.rs  features.rs  provider.rs
